--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "compile": "tsc",
-    "start": "npm run compile && nodemon ./dist/index.js"
+    "start": "npm run compile && nodemon --ext ts/js ./dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -12,12 +12,15 @@
   "description": "",
   "dependencies": {
     "@apollo/server": "^4.10.4",
+    "@graphql-tools/schema": "^10.0.7",
     "graphql": "^16.8.2",
     "knex": "^3.1.0",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "react-hook-form": "^7.54.2"
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
-    "typescript": "^5.4.5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   }
 }
